--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -968,7 +968,7 @@ body {
 
 
 
-/* .dropdown-menu {
+.dropdown-menu {
   display: none;
   position: absolute;
   background-color: #fff;
@@ -988,6 +988,6 @@ body {
 }
 
 
-.dropdown-menu.show .dropdown-item {
+.dropdown-menu .dropdown-item {
   color: unset !important;
-} */
+}
