--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -991,3 +991,14 @@ body {
 .dropdown-menu .dropdown-item {
   color: unset !important;
 }
+
+#gtco-main-nav .navbar-nav li a.active {
+
+
+  background: -webkit-linear-gradient(0deg, #005870, #2fbfd5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bolder;
+
+
+}
